Crash on choosing Lattice in panel property #80258

Closed
opened 2020-08-30 18:50:15 +02:00 by Ilja Razinkov · 9 comments

System Information
Operating system: Windows 10

Blender Version
Broken: 2.90.0 beta, hash 21cb6f09ff
Worked: 2.79

Blender crashing when selecting lattice in property panel, see screenshot
2020-08-30_19-45-11.png

Steps to reproduce:

  • Open attached blend
  • Run script once (it will add panel)
  • Try to chooce Lattice from dropdown

Blend file: latticeCrash.blend

**System Information** Operating system: Windows 10 **Blender Version** Broken: 2.90.0 beta, hash 21cb6f09ffa8 Worked: 2.79 Blender crashing when selecting lattice in property panel, see screenshot ![2020-08-30_19-45-11.png](https://archive.blender.org/developer/F8822376/2020-08-30_19-45-11.png) Steps to reproduce: - Open attached blend - Run script once (it will add panel) - Try to chooce Lattice from dropdown Blend file: [latticeCrash.blend](https://archive.blender.org/developer/F8822380/latticeCrash.blend)
Author

Added subscriber: @IPv6

Added subscriber: @IPv6
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm.

For me, it does not always crash in release builds, sometimes you have to pick a different object from the list multiple times.
I could not even get it to crash in 2.91, 2.90 crashes pretty consistently though.
In Debug builds, it assserts (also 2.91) :

BLI_assert failed: /blender/source/blender/editors/interface/interface_utils.c:497, ui_rna_collection_search_update_fn(), at 'strlen(name_buf) <= MEM_allocN_len(cis->name)'

I wasnt sure you could search in context.scene, "objects" and assign this to a StringProperty, but apparently this is used in other Addons as well.
[My understanding was that you'd have to assign this to a PointerProperty -- if I change the script to do so, I dont get crashes/asserts].

In any case, this should not assert/crash, needs a bit more investigation...

1  raise                                                              0x7ffff780a9e5 
2  abort                                                              0x7ffff77f3895 
3  _BLI_assert_abort                  BLI_assert.c              50    0xb67fe69      
4  ui_rna_collection_search_update_fn interface_utils.c         497   0x425edf7      
5  ui_searchbox_update_fn             interface_region_search.c 458   0x4240e1a      
6  ui_searchbox_update                interface_region_search.c 512   0x424106c      
7  ui_textedit_begin                  interface_handlers.c      3360  0x41fdce8      
8  button_activate_state              interface_handlers.c      7879  0x420b44f      
9  ui_do_but_TEX                      interface_handlers.c      4438  0x42006e5      
10 ui_do_but_SEARCH_UNLINK            interface_handlers.c      4466  0x42007fb      
11 ui_do_button                       interface_handlers.c      7594  0x420a98b      
12 ui_handle_button_event             interface_handlers.c      8733  0x420d3e4      
13 ui_region_handler                  interface_handlers.c      10613 0x4211c8d      
14 wm_handler_ui_call                 wm_event_system.c         638   0x36240c9      
15 wm_handlers_do_intern              wm_event_system.c         2754  0x3629510      
16 wm_handlers_do                     wm_event_system.c         2865  0x3629908      
17 wm_event_do_handlers               wm_event_system.c         3363  0x362aee0      
18 WM_main                            wm.c                      482   0x361f503      
19 main                               creator.c                 546   0x31e36aa      
Can confirm. For me, it does not always crash in release builds, sometimes you have to pick a different object from the list multiple times. I could not even get it to crash in 2.91, 2.90 crashes pretty consistently though. In Debug builds, it assserts (also 2.91) : ``` BLI_assert failed: /blender/source/blender/editors/interface/interface_utils.c:497, ui_rna_collection_search_update_fn(), at 'strlen(name_buf) <= MEM_allocN_len(cis->name)' ``` I wasnt sure you could search in context.scene, "objects" and assign this to a `StringProperty`, but apparently this is used in other Addons as well. [My understanding was that you'd have to assign this to a `PointerProperty` -- if I change the script to do so, I dont get crashes/asserts]. In any case, this should not assert/crash, needs a bit more investigation... ``` 1 raise 0x7ffff780a9e5 2 abort 0x7ffff77f3895 3 _BLI_assert_abort BLI_assert.c 50 0xb67fe69 4 ui_rna_collection_search_update_fn interface_utils.c 497 0x425edf7 5 ui_searchbox_update_fn interface_region_search.c 458 0x4240e1a 6 ui_searchbox_update interface_region_search.c 512 0x424106c 7 ui_textedit_begin interface_handlers.c 3360 0x41fdce8 8 button_activate_state interface_handlers.c 7879 0x420b44f 9 ui_do_but_TEX interface_handlers.c 4438 0x42006e5 10 ui_do_but_SEARCH_UNLINK interface_handlers.c 4466 0x42007fb 11 ui_do_button interface_handlers.c 7594 0x420a98b 12 ui_handle_button_event interface_handlers.c 8733 0x420d3e4 13 ui_region_handler interface_handlers.c 10613 0x4211c8d 14 wm_handler_ui_call wm_event_system.c 638 0x36240c9 15 wm_handlers_do_intern wm_event_system.c 2754 0x3629510 16 wm_handlers_do wm_event_system.c 2865 0x3629908 17 wm_event_do_handlers wm_event_system.c 3363 0x362aee0 18 WM_main wm.c 482 0x361f503 19 main creator.c 546 0x31e36aa ```
Philipp Oeser self-assigned this 2020-08-31 12:20:54 +02:00

This issue was referenced by 26d5c24f0a

This issue was referenced by 26d5c24f0aad85d137f7e465858877d80c0d6a36

This issue was referenced by cb0b0416f4

This issue was referenced by cb0b0416f454419cd1902434f7dffa2682417a56
Member

Added subscribers: @JulianEisel, @ideasman42

Added subscribers: @JulianEisel, @ideasman42
Member

@JulianEisel, @ideasman42 : if the names dont match for prop_search, this might actually be critical? [this is in 2.90...]
Checking which Addons might be affected here next...

@JulianEisel, @ideasman42 : if the names dont match for `prop_search`, this might actually be critical? [this is in 2.90...] Checking which Addons might be affected here next...
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#80258
No description provided.