source/blender/editors/interface/interface_utils.c
@@ -489,7 +489,7 @@ void ui_rna_collection_search_update_fn(const struct bContext *C,
     /* If no item has an own icon to display, libraries can use the library icons rather than the
      * name prefix for showing the library status. */
     int name_prefix_offset = cis->name_prefix_offset;
-    if (!has_id_icon && cis->is_id) {
+    if (!has_id_icon && cis->is_id && !requires_exact_data_name) {
       cis->iconid = UI_library_icon_get(cis->data);
       /* No need to re-allocate, string should be shorter than before (lib status prefix is
        * removed). */
